node js and wrap fix

--- a/src/app/styles/header-slider-styles.scss
+++ b/src/app/styles/header-slider-styles.scss
@@ -38,7 +38,7 @@
     }
 }
 
-.discountHeaderSection, a {
+.discountHeaderSection, .headerCatalogItem a {
     margin-right: 32px;
     white-space: nowrap;
     cursor: pointer;
