--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -295,6 +295,10 @@ body {
   }
 }
 
+.navButton {
+  margin-right: 16px;
+}
+
 .navButtonActive {
   font-weight: 600;
   margin-left: 16px;
@@ -322,7 +326,6 @@ body {
       position: relative;
       width: 100%;
       margin-bottom: 124px;
-
       .contactsMap {
         width: 100%;
         height: 728px;
@@ -330,6 +333,18 @@ body {
         filter: grayscale(100%);
         background-size: cover;
         display: block;
+      }
+      @media screen and (max-width: 768px) {
+        .contactsMap {
+          height: 400px;
+        }
+        margin-bottom: 100px;
+      }
+      @media screen and (max-width: 375px) {
+        .contactsMap {
+          height: 280px;
+        }
+        margin-bottom: 64px;
       }
       .mapBlocks {
         width: 100%;
@@ -379,8 +394,11 @@ body {
     margin-top: 120px;
   }
   @media screen and (max-width: 768px) {
-    margin-top: 32px;
+    margin: 32px 0;
     width: 100%;
+  }
+  @media screen and (max-width: 375px) {
+    margin: 24px 0;
   }
   > div {
     padding: 24px;
@@ -618,7 +636,7 @@ body {
     @media screen and (max-width: 768px) {
       grid-column-start: 1;
       grid-column-end: 1;
-      grid-template-columns: 1fr 2fr;
+      grid-template-columns: 2fr 3fr;
       .tableTitle {
         max-width: 260px;
         padding-left: 5%;
@@ -656,7 +674,7 @@ body {
     }
   }
   @media screen and (max-width: 375px) {
-    padding: 16px;
+    padding: 16px 32px 0 0;
     margin-bottom: 64px;
     border: none;
     width: 100%;
@@ -676,7 +694,6 @@ body {
         margin-bottom: 20px;
       }
       > p {
-
         font-size: 16px;
         width: 100%;
         color: #818181;
@@ -770,6 +787,7 @@ body {
     grid-row-start: 2;
     grid-row-end: 2;
     @media screen and (max-width: 768px) {
+      margin-top: 16px;
       font-size: 12px;
       grid-column-start: 2;
       grid-column-end: 2;
@@ -783,6 +801,7 @@ body {
         margin-right: 20px;
       }
       align-items: center;
+      justify-content: center;
     }
     @media screen and (max-width: 600px) {
       flex-direction: column;
